# hermes-adapter

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml  release.yml
docker/: adapter-entrypoint.sh  entrypoint.sh
docs/: a2a-architecture.md  a2a-user-guide.md  agent-sources.md  architecture.md  deploy-local.md  deploy-user-vps.md  deploy-vps.md  incident-le-rate-limit-2026-04-25.md  install.md  integration-akela.md  integration-studio.md  publishing.md  workspace-api.md
hermes_adapter/: __init__.py  __main__.py  cli.py  compose.py  config.py  manifest.py  supervisor.py
hermes_adapter/a2a/: __init__.py  __main__.py  client.py  entry.py  server.py
hermes_adapter/fleet/: __init__.py  orchestrator.py  routes.py
hermes_adapter/gateway/: __init__.py  a2a_routes.py  app.py  entry.py  hermes_bridge.py  openai_compat.py  workspace_routes.py
hermes_adapter/proxy/: __init__.py  providers.py  routes.py  secrets.py
hermes_adapter/workspace/: __init__.py  app.py  cors.py  mount.py  proc.py  repo_finder.py  symbols_cache.py
hermes_adapter/workspace/routes/: __init__.py  activate.py  file.py  git.py  init.py  listing.py  symbols.py  tree.py
scripts/: install-adapter.sh  install-docker.sh  install-fleet.sh  install-local-tunnel.sh  install-studio-vps.sh  install-tunnel.sh  install.sh
tests/: conftest.py  test_a2a_client.py  test_cli.py  test_compose.py  test_config.py  test_cors.py  test_gateway.py  test_manifest.py  test_repo_finder.py  test_symbols_cache.py  test_workspace_routes.py
